--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="profile-container">
-                    <img src="https://drive.google.com/file/d/1AfAmc9Tgp2L_6y8Y8wYgwswubAq9BpX-/view?usp=drive_link" alt="Bashir Kabir Zarewa" class="profile-image">
+                    <img src="profile.jpg" alt="Bashir Kabir Zarewa" class="profile-image">
                 </div>
                 
                 <h1 class="blog-title">Bashir Kabir Zarewa |</h1>
@@ -517,7 +517,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="profile-container" style="width: 100px; height: 100px; margin-bottom: 1.5rem;">
-                        <img src="https://drive.google.com/file/d/1AfAmc9Tgp2L_6y8Y8wYgwswubAq9BpX-/view?usp=drive_link" alt="Bashir Kabir Zarewa" class="profile-image">
+                        <img src="profile.jpg" alt="Bashir Kabir Zarewa" class="profile-image">
                     </div>
                     
                     <h3 class="footer-title">Bashir Kabir Zarewa</h3>
