--- a/whoami.html
+++ b/whoami.html
@@ -352,7 +352,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="profile-container">
-                    <img src="https://drive.google.com/file/d/1AfAmc9Tgp2L_6y8Y8wYgwswubAq9BpX-/view?usp=drive_link" alt="Bashir Kabir Zarewa" class="profile-image">
+                    <img src="profile.jpg" alt="Bashir Kabir Zarewa" class="profile-image">
                 </div>
                 
                 <h1 class="blog-title">Bashir Kabir Zarewa</h1>
