--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
                 <nav>
                     <ul class="nav-links">
                         <li><a href="#" class="active">posts</a></li>
-                        <li><a href="#">whoami</a></li>
+                        <li><a href="whoami.html">whoami</a></li>
                         <li><a href="#">tools</a></li>
                         <li><a href="#">basics</a></li>
                     </ul>
