Add tools.html page with security tools overview and styling

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="profile-container">
-                    <img src="profile.jpg" alt="Bashir Kabir Zarewa" class="profile-image">
+                    <img src="images/profile.jpg" alt="Bashir Kabir Zarewa" class="profile-image">
                 </div>
                 
                 <h1 class="blog-title">Bashir Kabir Zarewa |</h1>
@@ -422,8 +422,7 @@
                     <ul class="nav-links">
                         <li><a href="#" class="active">posts</a></li>
                         <li><a href="whoami.html">whoami</a></li>
-                        <li><a href="#">tools</a></li>
-                        <li><a href="#">basics</a></li>
+                        <li><a href="tools.html">tools</a></li>
                     </ul>
                 </nav>
             </div>
@@ -517,12 +516,12 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="profile-container" style="width: 100px; height: 100px; margin-bottom: 1.5rem;">
-                        <img src="profile.jpg" alt="Bashir Kabir Zarewa" class="profile-image">
+                        <img src="images/profile.jpg" alt="Bashir Kabir Zarewa" class="profile-image">
                     </div>
                     
                     <h3 class="footer-title">Bashir Kabir Zarewa</h3>
                     <p style="opacity: 0.8; line-height: 1.7; margin-bottom: 1rem;">
-                        Security researcher focused on AI safety, vulnerability discovery, and ethical hacking. Sharing knowledge to build a safer digital world.
+                        Bug bounty hunter and cybersecurity educator passionate about discovering vulnerabilities, teaching offensive security, and helping secure the digital world.
                     </p>
                     <div class="social-links">
                         <a href="https://x.com/bashirkabirz" title="Twitter"><i class="fab fa-twitter"></i></a>
