--- a/tools.html
+++ b/tools.html
@@ -216,7 +216,23 @@
             justify-content: space-between;
             align-items: center;
         }
+        .contact-info {
+            list-style: none;
+        }
 
+        .contact-info li {
+            margin-bottom: 0.8rem;
+        }
+
+        .contact-info a {
+            color: rgba(255, 255, 255, 0.8);
+            text-decoration: none;
+            transition: color 0.2s;
+        }
+
+        .contact-info a:hover {
+            color: var(--accent);
+        }
         .read-more {
             display: inline-block;
             background: var(--accent);
@@ -350,14 +366,13 @@
                 </div>
                 
                 <h1 class="blog-title">Bashir Kabir Zarewa</h1>
-                <p class="blog-subtitle">My thoughts on hacking, ai, faith, and more.</p>
+                <p class="blog-subtitle">My thoughts on Hacking, AI, Security, and More.</p>
                 
                 <nav>
                     <ul class="nav-links">
-                        <li><a href="index.html">posts</a></li>
-                        <li><a href="whoami.html">whoami</a></li>
-                        <li><a href="#" class="active">tools</a></li>
-                        <li><a href="#">Home</a></li>
+                        <li><a href="index.html">Posts</a></li>
+                        <li><a href="whoami.html">Whoami</a></li>
+                        <li><a href="#" class="active">Tools</a></li>
                     </ul>
                 </nav>
             </div>
