--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
     <header>
         <div class="header-social">
             <a href="https://x.com/bashirkabirz" title="Twitter"><i class="fab fa-twitter"></i></a>
-            <a href="https://github.com/L0C4LHO57" title="GitHub"><i class="fab fa-github"></i></a>
+            <a href="https://github.com/L0C4LH057" title="GitHub"><i class="fab fa-github"></i></a>
             <a href="https://www.linkedin.com/in/bashir-kabir-zarewa-18b67718a" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
         
         </div>
@@ -670,7 +670,7 @@
                     </p>
                     <div class="social-links">
                         <a href="https://x.com/bashirkabirz" title="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="https://github.com/L0C4LHO57" title="GitHub"><i class="fab fa-github"></i></a>
+                        <a href="https://github.com/L0C4LH057" title="GitHub"><i class="fab fa-github"></i></a>
                         <a href="https://www.linkedin.com/in/bashir-kabir-zarewa-18b67718a" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                 </div>
