--- a/tools.html
+++ b/tools.html
@@ -265,13 +265,94 @@
             color: var(--white);
             padding: 2.5rem 0 1.5rem 0;
             margin-top: 3rem;
-            footer-links a {
-                font-size: 0.93rem;
-            }
-            .copyright {
-                font-size: 0.85rem;
-            }
+            border-radius: 24px 24px 0 0;
         }
+
+        .footer-content {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+        }
+
+        .footer-section h3 {
+            font-size: 1.15rem;
+            margin-bottom: 1.1rem;
+            position: relative;
+            padding-bottom: 0.4rem;
+            font-weight: 700;
+        }
+
+        .footer-section h3::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 32px;
+            height: 2px;
+            background-color: var(--accent);
+            border-radius: 2px;
+        }
+
+        .footer-section p {
+            opacity: 0.8;
+            line-height: 1.7;
+            margin-bottom: 1rem;
+        }
+
+        .footer-links {
+            list-style: none;
+            padding: 0;
+        }
+
+        .footer-links li {
+            margin-bottom: 0.7rem;
+        }
+
+        .footer-links a {
+            color: rgba(255,255,255,0.85);
+            text-decoration: none;
+            transition: color var(--transition);
+            font-size: 1rem;
+        }
+
+        .footer-links a:hover {
+            color: var(--accent);
+        }
+
+        .footer-social {
+            display: flex;
+            gap: 0.8rem;
+            margin-top: 0.7rem;
+        }
+
+        .footer-social a {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            width: 36px;
+            height: 36px;
+            background: rgba(255,255,255,0.13);
+            border-radius: 50%;
+            color: var(--white);
+            text-decoration: none;
+            font-size: 18px;
+            transition: background var(--transition), transform var(--transition);
+        }
+
+        .footer-social a:hover {
+            background: var(--accent);
+            transform: translateY(-3px) scale(1.08);
+        }
+
+        .copyright {
+            text-align: center;
+            padding-top: 2rem;
+            margin-top: 2rem;
+            border-top: 1px solid rgba(255,255,255,0.13);
+            color: rgba(255,255,255,0.7);
+            font-size: 0.95rem;
+        }
+
         .contact-info {
             list-style: none;
         }
@@ -687,30 +768,37 @@
     </div>
 
     <!-- Footer -->
-    <footer>
+     <footer>
         <div class="container">
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3 class="footer-title">Bashir Kabir Zarewa</h3>
+                    <h3>Bashir Kabir Zarewa</h3>
                     <p>Cybersecurity researcher and enthusiast. Exploring the depths of ethical hacking, AI security, and modern defensive strategies. Sharing insights from the digital front lines.</p>
-                    <div class="social-links">
-                        <a href="https://x.com/bashirkabirz" title="Twitter"><i class="fab fa-twitter"></i></a>
-                        <a href="https://github.com/L0C4LH057" title="GitHub"><i class="fab fa-github"></i></a>
-                        <a href="https://www.linkedin.com/in/bashir-kabir-zarewa-18b67718a" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-                    </div>
                 </div>
+
                 <div class="footer-section">
-                    <h3 class="footer-title">Navigation</h3>
-                    <ul class="contact-info">
-                        <li><i class="fas fa-blog"></i> <a href="index.html">Blog Posts</a></li>
-                        <li><i class="fas fa-user"></i> <a href="whoami.html">About Me</a></li>
-                        <li><i class="fas fa-tools"></i> <a href="#">Tools</a></li>
-                        <li><i class="fas fa-file-alt"></i> <a href="#">Research Papers</a></li>
+                    <h3>Navigation</h3>
+                    <ul class="footer-links">
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="whoami.html">Whoami</a></li>
+                        <li><a href="tools.html">Tools</a></li>
+                        <li><a href="#">Categories</a></li>
                     </ul>
                 </div>
+
+                <div class="footer-section">
+                    <h3>Connect</h3>
+                    <p>Follow me on social media to get the latest updates and engage with my content.</p>
+                    <div class="footer-social">
+                        <a href="https://x.com/bashirkabirz" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://github.com/L0C4LH057" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+                        <a href="https://www.linkedin.com/in/bashir-kabir-zarewa-18b67718a" title="LinkedIn" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                    </div>
+                </div>
             </div>
+
             <div class="copyright">
-                &copy; 2025 Bashir Kabir Zarewa. All rights reserved. Opinions are my own.
+                &copy; <span id="copyright-year"></span> Bashir Kabir Zarewa. All rights reserved. Opinions are my own.
             </div>
         </div>
     </footer>
