--- a/writeups/haze-htb-write-up.html
+++ b/writeups/haze-htb-write-up.html
@@ -5,11 +5,11 @@
     <meta property="og:type" content="article">
     <meta property="og:title" content="Haze HTB Walkthrough: Full Active Directory Compromise">
     <meta property="og:description" content="A comprehensive walkthrough of Haze Machine From HackTheBox detailing enumeration, Splunk exploitation, gMSA abuse, AD ACL attacks, and privilege escalation to achieve full domain compromise.">
-    <meta property="og:image" content="../images/Haze.png"> 
+    <meta property="og:image" content="https://l0c4lh057.github.io/images/Haze.png"> 
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="../images/Haze.png"> 
+    <meta name="twitter:image" content="https://l0c4lh057.github.io/images/Haze.png"> 
     <meta property="og:url" content="#"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:title" content="Haze HTB Walkthrough: Full Active Directory Compromise">
