--- a/index.html
+++ b/index.html
@@ -157,6 +157,18 @@
             margin-bottom: 3rem;
         }
 
+        .typed-cursor {
+            font-weight: 800;
+            color: var(--accent);
+            animation: blink 0.8s steps(1) infinite;
+            font-size: inherit;
+            margin-left: 2px;
+        }
+        @keyframes blink {
+            0%, 50% { opacity: 1; }
+            51%, 100% { opacity: 0; }
+        }
+
         .section-title {
             font-size: 1.5rem;
             font-weight: 700;
@@ -501,7 +513,7 @@
                 <div class="profile-container">
                     <img src="images/profile.jpg" alt="Bashir Kabir Zarewa" class="profile-image">
                 </div>
-                <h1 class="blog-title">Bashir Kabir Zarewa</h1>
+                <h1 class="blog-title"><span id="typed-title"></span><span class="typed-cursor">|</span></h1>
                 <p class="blog-subtitle">My thoughts on Hacking, AI, Security, and more.</p>
 
                 <nav>
@@ -666,6 +678,21 @@
     </footer>
 
     <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const titleText = "Bashir Kabir Zarewa";
+            const typedTitle = document.getElementById('typed-title');
+            const cursor = document.querySelector('.typed-cursor');
+            let i = 0;
+
+            function typeWriter() {
+                if (i <= titleText.length) {
+                    typedTitle.textContent = titleText.slice(0, i);
+                    i++;
+                    setTimeout(typeWriter, 120);
+                }
+            }
+            typeWriter();
+        });
         document.getElementById('copyright-year').textContent = new Date().getFullYear();
     </script>
 </body>
