whoami update with ai skills

--- a/whoami.html
+++ b/whoami.html
@@ -440,12 +440,16 @@
                 <div class="main-column">
                     <section class="intro-text">
                         <h2 class="section-title">About Me</h2>
-                        <p>As a dedicated Cybersecurity Researcher, Bug Bounty Hunter, and Ethical Hacker, I specialize in web application security, automation, and Linux exploitation. My work involves identifying and reporting critical vulnerabilities for leading global companies, including Fortune 500s like Netflix and Hilton, where I've uncovered significant misconfigurations, sensitive data exposures, and internal infrastructure leaks.</p>
-                        <p>With over four years of hands-on experience, I have submitted dozens of impactful reports on platforms like HackerOne and Bugcrowd. I am passionate about building, breaking, and teaching security concepts. When I'm not hunting for bugs, I am committed to training the next generation of ethical hackers through intensive bootcamps and community-driven initiatives.</p>
+                        <p>As a dedicated Cybersecurity Researcher, Bug Bounty Hunter, and Ethical Hacker, I specialize in web application security, automation, and Linux exploitation. I’ve identified and reported critical vulnerabilities for major global companies including Fortune 500s like Netflix and Hilton, exposing serious misconfigurations, sensitive data leaks, and internal infrastructure flaws.</p>
+                        <p>With over four years of hands-on experience in offensive security, I’ve submitted dozens of impactful reports through platforms like HackerOne and Bugcrowd. My passion extends beyond hacking into building, breaking, and teaching core security concepts.</p>
+                        <p>In addition to cybersecurity, I bring five years of experience in Artificial Intelligence and Machine Learning, developing custom ML models, deep learning systems, and AI agents for both research and real-world applications. I also explore the cutting edge of Generative AI experimenting with large language models and creating tools that blend automation, reasoning, and creativity.</p>
+                        <p>Whether hunting bugs or mentoring the next generation of ethical hackers through bootcamps and community-driven training, my mission is to push the boundaries of security and intelligent systems.</p>
                     </section>
+                
 
                     <section class="consulting-box">
-                        <p><strong>Seeking security expertise?</strong> I provide expert consulting services in security assessments and strategic implementation. I am also available to advise high-velocity startups that require a passionate, well-networked technical advisor.</p>
+                        <p><strong>Seeking expertise in Cybersecurity and AI?</strong> I offer consulting services in security assessments, AI-driven threat detection, and strategic implementation of secure systems. With a strong background in both cybersecurity and artificial intelligence, I help organizations integrate machine learning, deep learning, and GenAI solutions to enhance automation, defense, and decision-making.</p>
+                        <p>Whether you're a high-velocity startup or an enterprise team, I’m available to advise as a passionate, well-connected technical expert, bringing practical insights from both offensive security and intelligent systems design.</p>
                     </section>
 
                     <section class="personal-section">
