search engine indexing

--- a/whoami.html
+++ b/whoami.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index, follow">
     <meta name="description" content="Meet Bashir Kabir Zarewa, a cybersecurity researcher, bug bounty hunter, and security advisor specializing in web application security and ethical hacking.">
     <title>Bashir Kabir Zarewa | Security Researcher & Advisor</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
