--- a/writeups/haze-htb-write-up.html
+++ b/writeups/haze-htb-write-up.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta property="og:type" content="article">
+    <meta name="robots" content="index, follow">
     <meta property="og:title" content="Haze HTB Walkthrough: Full Active Directory Compromise">
     <meta property="og:description" content="A comprehensive walkthrough of Haze Machine From HackTheBox detailing enumeration, Splunk exploitation, gMSA abuse, AD ACL attacks, and privilege escalation to achieve full domain compromise.">
     <meta property="og:image" content="https://l0c4lh057.github.io/images/Haze.png"> 
