--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="robots" content="index, follow">
     <meta name="google-site-verification" content="Aa898AoeMuuW_26uHHnabiR59gVv8-o8eO3or1BmKuk" />
+    <meta name="msvalidate.01" content="63582FFA42AECA34B358CAB48DCC83C3" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bashir Kabir Zarewa | Hacking, AI, CTFs and More</title>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
